--- a/views/result.ejs
+++ b/views/result.ejs
@@ -6,6 +6,7 @@
     <h3> <span class="wea-description"><%= weatherDescription %> </span> in <span class="wea-description"><%= cityName %></span>, <br> 
         with Temperature of <%= temperature %>℃ and Humidity of <%= weatherHumidity %>% </h3>
 </div>
+<a href="/" role="button" class="btn-back">Check for another City</a>
 </div>
 
 
