--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,7 @@
 <%- include("partials/header.ejs") -%> 
 
 
-<div>
+<div class="front-div">
     <h3 class="intro"> Stay updated with the current weather conditions <br> in various cities of the world.</h3>
     <form action="/weather" method="POST">
         <div class="home-input">
