--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -114,7 +114,7 @@ body {
 }
 .city-input {
     width: 4.4rem;
-    margin: 0.4rem 3.7rem 0.4rem 5.2rem;
+    margin: 0.4rem 3.7rem 2rem 5.2rem;
     border: 1.5px solid #3D087B;
     box-shadow: 0 0 9px 5px #f8937d;
     padding: 5px;
@@ -143,7 +143,7 @@ body {
     font-size: 0.8rem;
     line-height: 20px;
     padding: 5px;
-    margin: 0;
+    margin: 0 0 3rem 0;
     font-weight: 600;
 }
 
