--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,9 +1,5 @@
 <footer>
-    <p>Created with <span class="heart">❤</span> by Success Ogechi © <span id="year"></span> </p>
+    <p>Created with <span class="heart">❤</span> by Success Ogechi © 2021 </p>
 </footer>
-<script>
-    const d = new Date();
-    document.getElementById("year").innerHTML = d.getFullYear();
-</script>
 </body>
 </html>
